src/objects/FIR_Code__c.object
<CustomObject>
    <description>Used by E&amp;F to set the lsit of Related Airports/FIR Codes, related to one account. FIR codes are stored in object E&amp;F Related Records object.</description>
    <fields>
        <fullName>Contract__c</fullName>
        <description>E&amp;F Contract</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Airports/FIR Codes</relationshipLabel>
        <relationshipName>Airports_FIR_Codes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FIR_Code_Name__c</fullName>
        <description>Name of the FIR Code</description>
        <formula>FIR_Code__r.FIR_Code_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIR Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIR_Code__c</fullName>
        <description>E&amp;F Project. The FIR Code stored in E&amp;F Related Object under Record Type FIR Code</description>
        <label>Airport/FIR Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EF_Related_Records__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>FIR Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EF_Related_Records__c</referenceTo>
        <relationshipLabel>Airport/FIR Codes</relationshipLabel>
        <relationshipName>FIR_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Airport/FIR Code</label>
    <nameField>
        <displayFormat>FIR-{00000000}</displayFormat>
        <label>Related Airport/FIR codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airports/FIR Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>